k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: production
  labels:
    app: cloudshop
    environment: production
