k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloudshop-ingress
  namespace: production
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"

spec:
  ingressClassName: nginx

  rules:
    - host: cloudshop.local
      http:
        paths:

          # Frontend
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80

          # User Service
          - path: /users
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 5001

          # Product Service
          - path: /products
            pathType: Prefix
            backend:
              service:
                name: product-service
                port:
                  number: 5002

          # Order Service
          - path: /orders
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 5003
